<resources>
    <string name="app_name">pmdm-t4-01</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Opciones de la app -->
    <string name="action_navegador_web">Abrir navegador web</string>
    <string name="action_marcador_llamada">Marcador telefónico</string>
    <string name="action_llamada_numero">Marcar 123</string>
    <string name="action_llamada">Llamar 123</string>
    <string name="action_sms">Enviar sms</string>
    <string name="action_sms_compartir"> Enviar sms de emergencia</string>


</resources>