<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="iesm.pmdm.t4_01.MainActivity">

    <item
        android:id="@+id/create_action_navegador_web"
        android:title="@string/action_navegador_web"
        app:showAsAction="never"/>

    <item
        android:id="@+id/create_action_marcador_llamada"
        android:title="@string/action_marcador_llamada"
        app:showAsAction="never"/>

    <item
        android:id="@+id/create_action_llamada_numero"
        android:title="@string/action_llamada_numero"
        app:showAsAction="never"/>

    <item
        android:id="@+id/create_action_llamada"
        android:title="@string/action_llamada"
        app:showAsAction="never"/>

    <item
        android:id="@+id/create_action_sms"
        android:title="@string/action_sms"
        app:showAsAction="never"/>

    <item
        android:id="@+id/create_action_sms_compartir"
        android:title="@string/action_sms_compartir"
        app:showAsAction="never"/>

</menu>